fix numbers not wrapping

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     justify-content: end;
     align-items: center;
     padding: 10px;
+    word-break:break-all
 }
 
 .buttons{
